# Python

./: .gitignore  Course.py  bank_management.py  calculator.py  course.ipynb  main.py  task.py
Exploratory-Data-Analysis/: book.ipynb  clean_books.csv  salarie.ipynb  salaries_and_fields_cleaned.csv
Fast-Api/: helper.py  main.py  student.json
Fast-Api/.history/: helper_20260608142944.py  helper_20260608145730.py  helper_20260608145914.py  helper_20260608145945.py  helper_20260608150037.py  helper_20260608150203.py  helper_20260608150237.py  helper_20260608150357.py  helper_20260608150629.py  helper_20260608150936.py  helper_20260608151359.py  helper_20260608151503.py  helper_20260608151523.py  helper_20260608151544.py  helper_20260608151719.py  helper_20260608152123.py  helper_20260608152705.py  helper_20260608152943.py  helper_20260608153340.py  helper_20260608153438.py  helper_20260608153512.py  (+27 more)
Fast-Api/Lecture-4-Database/: .devdbrc  UserDatabase.db  main.py  pyproject.toml  test.py  test_main.py
Fast-Api/Lecture-4-Database/app/: auth.py  database.py  dependence.py
Fast-Api/Lecture-4-Database/app/models/: category.py  post.py  user.py
Fast-Api/Lecture-4-Database/app/routers/: posts.py  user.py
Fast-Api/Lecture-4-Database/app/schema/: database.py  schemas.py
NetFlix-EDA/: main.ipynb  netflixEDA.ipynb  syedmohsinali.ipynb
Pandas/: pandas.ipynb
bank_managment/: customer.txt  employees.txt
practices/: bank_management.py  calculator.py  course.py  number.txt  numpy.ipynb  story.txt  students_backup.txt  task.py  user_data.txt  words.txt
(+23 files in other folders)
