[project]
name = "data-base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datetime>=6.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "pyjwt>=2.13.0",
    "sqlalchemy>=2.0.50",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
